tests/invalid/unclosed_brace.intent
module Broken

entity User {
  id: UUID
  name: String

